fix horizontal scroll issue

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 }
 
 .app {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  /* overflow: auto; */
 }
